objects/SVMXC__Stock_Transfer__c.object
<CustomObject>
    <fields>
        <fullName>SMAX_PS_Company_Code__c</fullName>
        <description>Company code related to the location</description>
        <inlineHelpText>Company code related to the location</inlineHelpText>
        <label>Company Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMX_PS_VS_Perform_Stock_Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates if Stock Transfer needs to be performed or not. If set to true, Van Stock Transfer code will kick in and perform stock transfer</description>
        <inlineHelpText>This field indicates if Stock Transfer needs to be performed or not. If set to true, Van Stock Transfer code will kick in and perform stock transfer</inlineHelpText>
        <label>Perform Stock Transfer</label>
        <type>Checkbox</type>
    </fields>
    <validationRules>
        <fullName>BD_Sales_Org_Validation</fullName>
        <active>true</active>
        <description>The Sales Org on the From Location and To Location should match.</description>
        <errorConditionFormula>SVMXC__Source_Location__r.SMAX_PS_SalesOrg__c &lt;&gt; SVMXC__Destination_Location__r.SMAX_PS_SalesOrg__c</errorConditionFormula>
        <errorMessage>Cannot transfer stock between Locations in different Sales Orgs. Please select a different Destination.</errorMessage>
    </validationRules>
</CustomObject>